# GCodeRealign

./: README.md
.github/workflows/: ant.yml
GCodeRealign/: .gitignore  README.md  build.xml  manifest.mf
GCodeRealign/.github/workflows/: ant.yml
GCodeRealign/nbproject/: build-impl.xml  project.properties  project.xml
GCodeRealign/src/contoursolveinterface/: Contour.java
GCodeRealign/src/org/roiderh/gcoderealign/: Bundle.properties  Bundle_de.properties  GCodeRealignActionListener.java
GCodeRealign/src/org/roiderh/gcoderealigndialogs/: Bundle.properties  Bundle_de.properties  DialogGenerateCode.form  DialogGenerateCode.java  FreedomChangeListener.java  PanelContourelement.java  PanelLinesForm.java  Toolpath.java  ToolpathElement.java  ValueChangeListener.java
GCodeRealign/src/org/roiderh/gcodeviewer/: CalcException.java  contourelement.java  gcodereader.java  geometry.java  parameter.java  point.java
GCodeRealign/src/org/roiderh/gcodeviewer/customfunc/: IncAbs.java  SinCosTan.java
sketchsolve/src/: .gitignore  CMakeCache.txt  CMakeLists.txt  ConstraintedValue.cpp  ConstraintedValue.h  Derivatives.cpp  LineTo.cpp  LineTo.h  Makefile  Polyline.cpp  Polyline.h  README.md  cmake_install.cmake  compile_commands.json  contoursolveinterface_Contour.cpp  contoursolveinterface_Contour.h  main.cpp  solve.cpp  solve.h
sketchsolve/src/nbproject/: configurations.xml  project.xml
sketchsolve/src/nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
